fix map not showing in mobile

--- a/resources/css/contact.sass
+++ b/resources/css/contact.sass
@@ -76,6 +76,8 @@ input[type=text], input[type=email], textarea
     order: 2
   .clm-2-sm
     order: 1
+    #map
+      height: 175px
   +medium-devices
     .clm-2-md
       min-height: 100px
